--- a/index.html
+++ b/index.html
@@ -511,68 +511,90 @@
                 id: 15,
                 layout: 'detail',
                 tag: "發錢實作",
-                title: "下載錢包",
+                title: "下載trust錢包",
                 content: (
-                    <div className="flex flex-col md:flex-row items-center justify-center gap-8 md:gap-12 py-4">
-                        <p className="text-lg md:text-xl text-slate-600 text-center md:text-left order-first md:order-none w-full md:w-auto md:max-w-md">
-                            沒有錢包就收不到加密貨幣，先下載錢包才能繼續發錢。
-                        </p>
-                        <div className="flex flex-col sm:flex-row items-center gap-6 md:gap-8">
-                            <div className="flex-shrink-0 bg-white rounded-2xl p-4 border-2 border-slate-200 shadow-sm">
-                                <img src="https://api.qrserver.com/v1/create-qr-code/?size=200x200&data=https://trustwallet.com/download" alt="下載錢包 QR Code" className="w-[200px] h-[200px] rounded-lg" />
-                                <p className="text-center text-sm font-medium text-slate-500 mt-2">掃描下載</p>
+                    <div className="flex flex-col items-center justify-center gap-6 py-2">
+                        <div className="flex flex-col sm:flex-row items-center gap-6 md:gap-10 flex-shrink-0">
+                            <div className="flex-shrink-0 bg-white rounded-2xl p-5 border-2 border-amber-400 shadow-xl ring-4 ring-amber-100">
+                                <img src="https://api.qrserver.com/v1/create-qr-code/?size=200x200&data=https://trustwallet.com/download" alt="下載 Trust 錢包 QR Code" className="w-[200px] h-[200px] md:w-[240px] md:h-[240px] rounded-lg" />
+                                <p className="text-center text-sm font-bold text-slate-600 mt-3">掃描下載 Trust 錢包</p>
                             </div>
                             <div className="flex flex-col gap-4">
-                                <a href="https://apps.apple.com/app/trust-wallet/id1288339409" target="_blank" rel="noopener noreferrer" className="inline-flex items-center justify-center gap-3 bg-black text-white px-6 py-4 rounded-2xl font-bold text-lg hover:bg-slate-800 transition-colors shadow-lg hover:shadow-xl min-w-[220px]">
+                                <a href="https://apps.apple.com/app/trust-wallet/id1288339409" target="_blank" rel="noopener noreferrer" className="inline-flex items-center justify-center gap-3 bg-black text-white px-6 py-4 rounded-2xl font-bold text-lg hover:bg-slate-800 transition-colors shadow-xl hover:shadow-2xl min-w-[220px] border-2 border-slate-800">
                                     <svg className="w-8 h-8" viewBox="0 0 24 24" fill="currentColor"><path d="M18.71 19.5c-.83 1.24-1.71 2.45-3.05 2.47-1.34.03-1.77-.79-3.29-.79-1.53 0-2 .77-3.27.82-1.31.05-2.3-1.32-3.14-2.53C4.25 17 2.94 12.45 4.7 9.39c.87-1.52 2.43-2.48 4.12-2.51 1.28-.02 2.5.87 3.29.87.78 0 2.26-1.07 3.81-.91.65.03 2.47.26 3.64 1.98-.09.06-2.17 1.28-2.15 3.81.03 3.02 2.65 4.03 2.68 4.04-.03.07-.42 1.44-1.38 2.83M13 3.5c.73-.83 1.94-1.46 2.94-1.5.13 1.17-.34 2.35-1.04 3.19-.69.85-1.83 1.51-2.95 1.42-.15-1.15.41-2.35 1.05-3.11z"/></svg>
                                     App Store 下載
                                 </a>
-                                <a href="https://play.google.com/store/apps/details?id=com.wallet.crypto.trustapp" target="_blank" rel="noopener noreferrer" className="inline-flex items-center justify-center gap-3 bg-slate-800 text-white px-6 py-4 rounded-2xl font-bold text-lg hover:bg-slate-700 transition-colors shadow-lg hover:shadow-xl min-w-[220px]">
+                                <a href="https://play.google.com/store/apps/details?id=com.wallet.crypto.trustapp" target="_blank" rel="noopener noreferrer" className="inline-flex items-center justify-center gap-3 bg-slate-800 text-white px-6 py-4 rounded-2xl font-bold text-lg hover:bg-slate-700 transition-colors shadow-xl hover:shadow-2xl min-w-[220px] border-2 border-slate-700">
                                     <svg className="w-8 h-8" viewBox="0 0 24 24"><path fill="currentColor" d="M3.609 1.814L13.792 12 3.61 22.186a.996.996 0 0 1-.61-.92V2.734a1 1 0 0 1 .609-.92zm10.89 10.893l2.302 2.302-10.89 6.787 8.588-9.089zm3.199-3.198l2.807 1.526a.998.998 0 0 1 0 1.73l-2.808 1.526L15.206 12l2.492-2.491zM5.864 2.658L16.8 8.99l-2.302 2.302-8.634-8.634z"/></svg>
                                     Google Play 下載
                                 </a>
                             </div>
                         </div>
+                        <div className="w-full max-w-2xl flex-shrink-0 mt-2">
+                            <img src="https://i.urusai.cc/xGH0w.png" alt="Trust Wallet 下載頁面" className="w-full h-auto rounded-2xl border-2 border-slate-200 shadow-lg object-contain" />
+                        </div>
+                        <p className="text-lg md:text-xl text-slate-600 text-center mt-2 max-w-xl">
+                            沒有錢包就收不到加密貨幣，先下載 Trust 錢包才能繼續發錢。
+                        </p>
                     </div>
                 )
             },
             {
                 id: 16,
-                layout: 'split',
-                title: "區塊鏈 vs 銀行：數位面交與優缺點",
-                leftContent: (
-                    <div className="space-y-5">
-                        <div className="bg-white p-6 rounded-2xl shadow-sm border border-slate-100">
-                            <h3 className="text-xl font-bold text-slate-800 mb-2">差異在哪？</h3>
-                            <ul className="list-disc list-inside text-lg text-slate-600 space-y-1">
-                                <li><strong>數位面交</strong>：從錢包到錢包，金流不經銀行</li>
-                                <li><strong>礦工</strong>：區塊鏈的營運者，提供記帳與安全服務</li>
-                            </ul>
-                        </div>
-                        <div className="grid grid-cols-1 md:grid-cols-2 gap-4">
-                            <div className="bg-red-50 p-4 rounded-xl border border-red-100">
-                                <h4 className="font-bold text-red-800 mb-2">缺點（去中介代價）</h4>
-                                <p className="text-sm text-slate-600">無實名、不可逆、監管困難</p>
+                layout: 'detail',
+                tag: "發錢實作",
+                title: "建立新錢包、大功告成",
+                content: (
+                    <div className="flex flex-col items-center justify-center h-full py-4">
+                        <p className="text-lg text-slate-600 mb-6 text-center">創建 Trust Wallet 流程</p>
+                        <div className="flex flex-wrap justify-center gap-6 md:gap-8">
+                            <div className="flex flex-col items-center">
+                                <div className="w-[140px] md:w-[180px] rounded-3xl border-4 border-slate-200 overflow-hidden shadow-lg bg-slate-100" style={{ aspectRatio: '9/19.5' }}>
+                                    <img src="https://placehold.co/280x606/e2e8f0/64748b?text=步驟1" alt="Trust Wallet 創建步驟 1" className="w-full h-full object-cover" />
+                                </div>
+                                <span className="mt-2 font-bold text-slate-600">步驟 1</span>
                             </div>
-                            <div className="bg-green-50 p-4 rounded-xl border border-green-100">
-                                <h4 className="font-bold text-green-800 mb-2">優點</h4>
-                                <p className="text-sm text-slate-600">轉帳像傳 LINE、跨境無差別、區塊鏈是第二次網路革命</p>
+                            <div className="flex flex-col items-center">
+                                <div className="w-[140px] md:w-[180px] rounded-3xl border-4 border-slate-200 overflow-hidden shadow-lg bg-slate-100" style={{ aspectRatio: '9/19.5' }}>
+                                    <img src="https://placehold.co/280x606/e2e8f0/64748b?text=步驟2" alt="Trust Wallet 創建步驟 2" className="w-full h-full object-cover" />
+                                </div>
+                                <span className="mt-2 font-bold text-slate-600">步驟 2</span>
+                            </div>
+                            <div className="flex flex-col items-center">
+                                <div className="w-[140px] md:w-[180px] rounded-3xl border-4 border-slate-200 overflow-hidden shadow-lg bg-slate-100" style={{ aspectRatio: '9/19.5' }}>
+                                    <img src="https://placehold.co/280x606/e2e8f0/64748b?text=步驟3" alt="Trust Wallet 創建步驟 3" className="w-full h-full object-cover" />
+                                </div>
+                                <span className="mt-2 font-bold text-slate-600">步驟 3</span>
                             </div>
                         </div>
-                    </div>
-                ),
-                rightContent: (
-                    <div className="flex flex-col justify-center h-full space-y-4">
-                        <div className="p-4 bg-blue-50 rounded-xl border border-blue-100">
-                            <p className="text-lg font-bold text-blue-900">挖礦收入付電費</p>
-                            <p className="text-slate-600">礦機 = 基礎設施營運者的商業行為</p>
-                        </div>
-                        <p className="text-slate-500 text-sm">取得方式：交易所買幣 / 成為礦工挖礦</p>
                     </div>
                 )
             },
             {
                 id: 17,
+                layout: 'detail',
+                tag: "發錢實作",
+                title: "貼地址、零空頭",
+                content: (
+                    <div className="flex flex-col md:flex-row items-center justify-center gap-8 md:gap-12 py-6">
+                        <div className="flex flex-col items-center gap-6 text-center md:text-left">
+                            <p className="text-lg text-slate-600 max-w-md">請貼上您創建好的錢包地址（<strong>0x 開頭</strong>），填寫問卷即完成。</p>
+                            <a href="https://www.surveycake.com/s/qQdXk" target="_blank" rel="noopener noreferrer" className="inline-flex items-center gap-2 bg-amber-500 hover:bg-amber-600 text-white font-bold text-lg px-8 py-4 rounded-2xl shadow-lg hover:shadow-xl transition-all">
+                                <svg className="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path strokeLinecap="round" strokeLinejoin="round" strokeWidth={2} d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z" /></svg>
+                                填寫問卷 · 貼上地址
+                            </a>
+                        </div>
+                        <div className="flex flex-col items-center">
+                            <div className="bg-white rounded-2xl p-4 border-2 border-slate-200 shadow-sm">
+                                <img src="https://api.qrserver.com/v1/create-qr-code/?size=200x200&data=https://www.surveycake.com/s/qQdXk" alt="問卷 QR Code" className="w-[200px] h-[200px] rounded-lg" />
+                                <p className="text-center text-sm font-medium text-slate-500 mt-2">掃描填寫問卷</p>
+                            </div>
+                        </div>
+                    </div>
+                )
+            },
+            {
+                id: 18,
                 layout: 'detail',
                 tag: "幣圈的銅臭味",
                 title: "穩定幣與改寫金融規則",
@@ -604,7 +626,7 @@
                 )
             },
             {
-                id: 18,
+                id: 19,
                 layout: 'detail',
                 tag: "資產代幣化",
                 title: "黃金、股票與 DeFi",
@@ -629,7 +651,7 @@
                 )
             },
             {
-                id: 19,
+                id: 20,
                 layout: 'detail',
                 tag: "常用工具",
                 title: "Visa 卡、錢包與跨境投資",
@@ -656,7 +678,7 @@
                 )
             },
             {
-                id: 20,
+                id: 21,
                 layout: 'split',
                 title: "總結與延伸閱讀",
                 leftContent: (
@@ -691,7 +713,7 @@
                 )
             },
             {
-                id: 21,
+                id: 22,
                 layout: 'cover',
                 title: "感謝聆聽",
                 subtitle: "填問卷，送訂閱",
