--- a/index.html
+++ b/index.html
@@ -511,31 +511,37 @@
                 id: 15,
                 layout: 'detail',
                 tag: "發錢實作",
-                title: "下載trust錢包",
+                title: "下載錢包",
                 content: (
-                    <div className="flex flex-col items-center justify-center gap-6 py-2">
-                        <div className="flex flex-col sm:flex-row items-center gap-6 md:gap-10 flex-shrink-0">
-                            <div className="flex-shrink-0 bg-white rounded-2xl p-5 border-2 border-amber-400 shadow-xl ring-4 ring-amber-100">
-                                <img src="https://api.qrserver.com/v1/create-qr-code/?size=200x200&data=https://trustwallet.com/download" alt="下載 Trust 錢包 QR Code" className="w-[200px] h-[200px] md:w-[240px] md:h-[240px] rounded-lg" />
-                                <p className="text-center text-sm font-bold text-slate-600 mt-3">掃描下載 Trust 錢包</p>
-                            </div>
-                            <div className="flex flex-col gap-4">
-                                <a href="https://apps.apple.com/app/trust-wallet/id1288339409" target="_blank" rel="noopener noreferrer" className="inline-flex items-center justify-center gap-3 bg-black text-white px-6 py-4 rounded-2xl font-bold text-lg hover:bg-slate-800 transition-colors shadow-xl hover:shadow-2xl min-w-[220px] border-2 border-slate-800">
-                                    <svg className="w-8 h-8" viewBox="0 0 24 24" fill="currentColor"><path d="M18.71 19.5c-.83 1.24-1.71 2.45-3.05 2.47-1.34.03-1.77-.79-3.29-.79-1.53 0-2 .77-3.27.82-1.31.05-2.3-1.32-3.14-2.53C4.25 17 2.94 12.45 4.7 9.39c.87-1.52 2.43-2.48 4.12-2.51 1.28-.02 2.5.87 3.29.87.78 0 2.26-1.07 3.81-.91.65.03 2.47.26 3.64 1.98-.09.06-2.17 1.28-2.15 3.81.03 3.02 2.65 4.03 2.68 4.04-.03.07-.42 1.44-1.38 2.83M13 3.5c.73-.83 1.94-1.46 2.94-1.5.13 1.17-.34 2.35-1.04 3.19-.69.85-1.83 1.51-2.95 1.42-.15-1.15.41-2.35 1.05-3.11z"/></svg>
-                                    App Store 下載
-                                </a>
-                                <a href="https://play.google.com/store/apps/details?id=com.wallet.crypto.trustapp" target="_blank" rel="noopener noreferrer" className="inline-flex items-center justify-center gap-3 bg-slate-800 text-white px-6 py-4 rounded-2xl font-bold text-lg hover:bg-slate-700 transition-colors shadow-xl hover:shadow-2xl min-w-[220px] border-2 border-slate-700">
-                                    <svg className="w-8 h-8" viewBox="0 0 24 24"><path fill="currentColor" d="M3.609 1.814L13.792 12 3.61 22.186a.996.996 0 0 1-.61-.92V2.734a1 1 0 0 1 .609-.92zm10.89 10.893l2.302 2.302-10.89 6.787 8.588-9.089zm3.199-3.198l2.807 1.526a.998.998 0 0 1 0 1.73l-2.808 1.526L15.206 12l2.492-2.491zM5.864 2.658L16.8 8.99l-2.302 2.302-8.634-8.634z"/></svg>
-                                    Google Play 下載
-                                </a>
+                    <div className="flex flex-col md:flex-row items-center gap-6 md:gap-8 h-full min-h-0 py-2">
+                        <div className="flex-shrink-0 w-full md:max-w-[45%] flex items-center justify-center">
+                            <img src="https://i.urusai.cc/xGH0w.png" alt="Trust Wallet 下載頁面" className="max-h-[320px] md:max-h-[380px] w-auto object-contain rounded-2xl border-2 border-slate-200 shadow-lg" />
+                        </div>
+                        <div className="flex flex-col items-center md:items-start gap-5 flex-1 min-w-0">
+                            <p className="text-base md:text-lg text-slate-600 text-center md:text-left">
+                                沒有錢包就收不到加密貨幣，先下載錢包才能繼續發錢。
+                            </p>
+                            <div className="flex flex-col sm:flex-row items-center gap-4 md:gap-5">
+                                <div className="flex-shrink-0 bg-white rounded-2xl p-4 border-2 border-slate-200 shadow-sm">
+                                    <img src="https://api.qrserver.com/v1/create-qr-code/?size=160x160&data=https://trustwallet.com/download" alt="下載 Trust 錢包 QR Code" className="w-[160px] h-[160px] rounded-lg" />
+                                    <p className="text-center text-xs font-bold text-slate-600 mt-2">掃描下載</p>
+                                </div>
+                                <div className="flex flex-col gap-3">
+                                    <a href="https://apps.apple.com/app/trust-wallet/id1288339409" target="_blank" rel="noopener noreferrer" className="inline-flex items-center justify-center gap-2 bg-black text-white px-5 py-3 rounded-xl font-bold text-sm hover:bg-slate-800 transition-colors shadow-md min-w-[180px]">
+                                        <svg className="w-6 h-6" viewBox="0 0 24 24" fill="currentColor"><path d="M18.71 19.5c-.83 1.24-1.71 2.45-3.05 2.47-1.34.03-1.77-.79-3.29-.79-1.53 0-2 .77-3.27.82-1.31.05-2.3-1.32-3.14-2.53C4.25 17 2.94 12.45 4.7 9.39c.87-1.52 2.43-2.48 4.12-2.51 1.28-.02 2.5.87 3.29.87.78 0 2.26-1.07 3.81-.91.65.03 2.47.26 3.64 1.98-.09.06-2.17 1.28-2.15 3.81.03 3.02 2.65 4.03 2.68 4.04-.03.07-.42 1.44-1.38 2.83M13 3.5c.73-.83 1.94-1.46 2.94-1.5.13 1.17-.34 2.35-1.04 3.19-.69.85-1.83 1.51-2.95 1.42-.15-1.15.41-2.35 1.05-3.11z"/></svg>
+                                        App Store 下載
+                                    </a>
+                                    <a href="https://play.google.com/store/apps/details?id=com.wallet.crypto.trustapp" target="_blank" rel="noopener noreferrer" className="inline-flex items-center justify-center gap-2 bg-slate-800 text-white px-5 py-3 rounded-xl font-bold text-sm hover:bg-slate-700 transition-colors shadow-md min-w-[180px]">
+                                        <svg className="w-6 h-6" viewBox="0 0 24 24"><path fill="currentColor" d="M3.609 1.814L13.792 12 3.61 22.186a.996.996 0 0 1-.61-.92V2.734a1 1 0 0 1 .609-.92zm10.89 10.893l2.302 2.302-10.89 6.787 8.588-9.089zm3.199-3.198l2.807 1.526a.998.998 0 0 1 0 1.73l-2.808 1.526L15.206 12l2.492-2.491zM5.864 2.658L16.8 8.99l-2.302 2.302-8.634-8.634z"/></svg>
+                                        Google Play 下載
+                                    </a>
+                                    <a href="https://chrome.google.com/webstore/detail/trust-wallet/bggpkpheelbmdpjfephcgbjifcjkhnnn" target="_blank" rel="noopener noreferrer" className="inline-flex items-center justify-center gap-2 bg-slate-100 hover:bg-slate-200 text-slate-800 px-5 py-3 rounded-xl font-bold text-sm transition-colors border-2 border-slate-300 min-w-[180px]">
+                                        <svg className="w-5 h-5" viewBox="0 0 24 24" fill="currentColor"><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-1 17.93c-3.95-.49-7-3.85-7-7.93 0-.62.08-1.21.21-1.79L9 15v1c0 1.1.9 2 2 2v1.93zm3.9-2.54c-.26-.81-1-1.39-1.9-1.39h-1v-3c0-.55-.45-1-1-1H8v-2h2c.55 0 1-.45 1-1V7h2c1.1 0 2-.9 2-2v-.41c2.93 1.19 5 4.06 5 7.41 0 2.08-.8 3.97-2.1 5.39z"/></svg>
+                                        Chrome 擴充功能
+                                    </a>
+                                </div>
                             </div>
                         </div>
-                        <div className="w-full max-w-2xl flex-shrink-0 mt-2">
-                            <img src="https://i.urusai.cc/xGH0w.png" alt="Trust Wallet 下載頁面" className="w-full h-auto rounded-2xl border-2 border-slate-200 shadow-lg object-contain" />
-                        </div>
-                        <p className="text-lg md:text-xl text-slate-600 text-center mt-2 max-w-xl">
-                            沒有錢包就收不到加密貨幣，先下載 Trust 錢包才能繼續發錢。
-                        </p>
                     </div>
                 )
             },
@@ -574,21 +580,18 @@
                 id: 17,
                 layout: 'detail',
                 tag: "發錢實作",
-                title: "貼地址、零空頭",
+                title: "領空投",
                 content: (
-                    <div className="flex flex-col md:flex-row items-center justify-center gap-8 md:gap-12 py-6">
-                        <div className="flex flex-col items-center gap-6 text-center md:text-left">
-                            <p className="text-lg text-slate-600 max-w-md">請貼上您創建好的錢包地址（<strong>0x 開頭</strong>），填寫問卷即完成。</p>
-                            <a href="https://www.surveycake.com/s/qQdXk" target="_blank" rel="noopener noreferrer" className="inline-flex items-center gap-2 bg-amber-500 hover:bg-amber-600 text-white font-bold text-lg px-8 py-4 rounded-2xl shadow-lg hover:shadow-xl transition-all">
-                                <svg className="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path strokeLinecap="round" strokeLinejoin="round" strokeWidth={2} d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z" /></svg>
-                                填寫問卷 · 貼上地址
-                            </a>
-                        </div>
-                        <div className="flex flex-col items-center">
-                            <div className="bg-white rounded-2xl p-4 border-2 border-slate-200 shadow-sm">
-                                <img src="https://api.qrserver.com/v1/create-qr-code/?size=200x200&data=https://www.surveycake.com/s/qQdXk" alt="問卷 QR Code" className="w-[200px] h-[200px] rounded-lg" />
-                                <p className="text-center text-sm font-medium text-slate-500 mt-2">掃描填寫問卷</p>
-                            </div>
+                    <div className="flex flex-col items-center justify-center gap-6 py-4">
+                        <p className="text-lg md:text-xl text-slate-600 text-center max-w-2xl">
+                            只要有對方的錢包地址，就可以看到對方的交易記錄。鏈上金流只要有地址就能追蹤——前面用以太幣空投給大家，所以可以直接從鏈上看到所有人的金流記錄。
+                        </p>
+                        <a href="https://www.oklink.com" target="_blank" rel="noopener noreferrer" className="inline-flex items-center gap-2 text-amber-600 hover:text-amber-700 font-bold text-lg underline">
+                            在 OKLink 查詢鏈上交易 →
+                        </a>
+                        <div className="w-full max-w-3xl">
+                            <img src="https://i.urusai.cc/gIGej.png" alt="OKLink 鏈上交易查詢畫面" className="w-full h-auto rounded-2xl border-2 border-slate-200 shadow-lg object-contain" />
+                            <p className="text-center text-sm text-slate-500 mt-2">OKLink 交易畫面：輸入錢包地址即可追蹤鏈上金流</p>
                         </div>
                     </div>
                 )
